# llm-data-aug

./: .gitignore  README.md  constants.py  hello.py  pyproject.toml  run_evaluation.py  utils.py
data/: cleaned_user_reviews.csv  translated_user_reviews.csv  user_reviews.csv  user_reviews_transformed_1.csv  val_data.csv  vietnamese-stopwords.txt
data/class_samples/: user_review_class_samples.csv
data/downsampled/: downsampled_user_reviews.csv  test_downsampled_user_reviews.csv  train_downsampled_user_reviews.csv  val_downsampled_user_reviews.csv
data/llm_generated/: auggpt_augmented_user_reviews_negative.csv  auggpt_augmented_user_reviews_neutral.csv  auggpt_failed_original_sentences_negative.csv  auggpt_failed_original_sentences_neutral.csv  auggpt_upsampled_user_reviews.csv  negative_user_reviews.csv  neutral_user_reviews.csv  neutral_user_reviews_1.csv
data/upsampled/: test_upsampled_user_reviews.csv  train_upsampled_user_reviews.csv  upsampled_user_reviews.csv  val_upsampled_user_reviews.csv
dataloaders/: custom_dataset.py  train_test_split.py
evaluation/: eval.py  prompt_evaluator.py
notebooks/: .gitignore  evaluation.ipynb.dvc  llm_augmentation.ipynb  llm_data_aug.ipynb  resampling.ipynb
src/: __init__.py  constants.py  dataset.py  model.py  preprocessing.py  train.py  utils.py  visualization.py
src/abstract/: trainer.py
src/dataloaders/: train_test_split.py
src/evaluation/: eval.py  prompt_evaluator.py
src/synthesizer/: generator.py  (+2 more)
synthesizer/: generator.py  models.py  runner.py  transform_csv.py
trainers/: phoBert_trainer.py
(+12 files in other folders)
